--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,11 +44,11 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",                     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    // "baseUrl": "./src",                          /* Base directory to resolve non-absolute module names. */
-    // "paths": { "lib/*": ["../lib/*"]},           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
+    // "paths": { "lib/*": ["lib/*"]},           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
-    "types": ["node"],                              /* Type declaration files to be included in compilation. */
+    // "types": ["node"],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                        /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     // "preserveSymlinks": true,                    /* Do not resolve the real path of symlinks. */
@@ -70,7 +70,10 @@
   },
   "include": [
     "./src/*",
-    "./lib/v2ray-config-json-schema/**/*",
+    "./lib/v2ray-config-json-schema/src/*",
     "./lib/protos/**/*"
-  ]
+  ],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
 }
